Fixed some application status shiftig to the left. Modified some styles for application card looked better in smaller screens

--- a/src/app/shell/personal-cabinet/shared-cabinet/applications/application-card/info-status/info-status.component.scss
+++ b/src/app/shell/personal-cabinet/shared-cabinet/applications/application-card/info-status/info-status.component.scss
@@ -6,7 +6,7 @@
   i {
     padding-right: 5px;
   }
-  width: max-content;
+  width: auto;
   max-width: max-content;
   font-size: 13px;
   font: Open Sans;
